Redeploy completo: asegurar HTML actualizado

--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,11 @@
 <div id="manageScreen" class="screen hidden">
   <h2>Administrar mazos</h2>
   <ul id="decksList" class="decks-list"></ul>
+
+  <h2 style="margin-top: 2rem;">📘 Mazos públicos</h2>
+  <ul id="publicDecksList" class="decks-list"></ul>
 </div>
+
 
 <!-- Edit Deck -->
 <div id="editScreen" class="screen hidden">
@@ -95,5 +99,7 @@
 </footer>
 
 <script src="/script.js"></script>
+<script>console.log("HTML actualizado para Render el 20/04")</script>
 </body>
 </html>
+<!-- Actualizado el 20/04 para mazos públicos -->
